<resources>
    <string name="app_name">PetitsCamperols</string>
    <string name="btnJugar">Play</string>
    <string name="btnRanquing">Ranking</string>
    <string name="btnAjustaments">Settings</string>
    <string name="btnQuant">About</string>
    <string name="userName">Username</string>
    <string name="userEmail">Email</string>
    <string name="btnGuarda">Save</string>
    <string name="txtExplicatiu">We are from stucom.</string>
    <string name="btnOnSom">Where are we</string>
    <string name="title_activity_act_map">Map</string>
    <string name="btnBack">Back</string>
    <string name="btnImg">Image</string>
    <string name="btnGaleria">Gallery</string>
    <string name="btnCamera">Camera</string>
    <string name="send">Send</string>
    <string name="registerExplanationText">Write your mail and send it to us. Soo we can send you your verification code to be registered in our app.</string>
    <string name="veriCode">Code</string>
    <string name="veriCodeExplanationText">Plaease, input the code that we sent to your email.</string>
    <string name="btnNewGame">New Game</string>
    <string name="you_lost">You lost</string>
    <string name="bonk">Play Bonk</string>
</resources>
