<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="254dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnJugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnJugar" />

        <Button
            android:id="@+id/btnBonk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bonk"
            tools:layout_editor_absoluteX="161dp"
            tools:layout_editor_absoluteY="425dp" />

        <Button
            android:id="@+id/btnRanquing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnRanquing" />

        <Button
            android:id="@+id/btnAjustaments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnAjustaments" />

        <Button
            android:id="@+id/btnQuant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnQuant" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>